--- a/owncloudApp/src/main/res/values-cs-rCZ/strings.xml
+++ b/owncloudApp/src/main/res/values-cs-rCZ/strings.xml
@@ -73,6 +73,7 @@
   <string name="pattern_configure_your_pattern_explanation">Gesto bude vyžadováno při každém startu aplikace</string>
   <string name="pass_code_locked">Uzamčeno bezpečnostním kódem</string>
   <string name="pattern_locked">Uzamčeno gestem</string>
+  <!--Bottom navigation bar-->
   <string name="recommend_subject">Zkuste %1$s na svém chytrém telefonu!</string>
   <string name="recommend_text">Chtěl bych vás pozvat k používání %1$s na vašem chytrém telefonu!\nKe stažení zde: %2$s</string>
   <string name="error_reason">protože</string>
@@ -367,6 +368,7 @@ správce systému.</string>
   <string name="clipboard_uxexpected_error">Neočekávaná chyba při kopírování do schránky</string>
   <string name="clipboard_label">Text zkopírován z %1$s</string>
   <string name="error_cant_bind_to_operations_service">Kritická chyba: operace nelze provést</string>
+  <string name="network_error_socket_exception">Při pokusu o připojení k serveru došlo k chybě.</string>
   <string name="network_error_socket_timeout_exception">Serveru trvalo příliš dlouho odpovědět</string>
   <string name="network_error_connect_timeout_exception">Připojování k serveru trvalo příliš dlouho</string>
   <string name="network_host_not_available">Server je nedostupný</string>
