--- a/owncloudApp/src/main/res/values-en-rGB/strings.xml
+++ b/owncloudApp/src/main/res/values-en-rGB/strings.xml
@@ -75,6 +75,11 @@
   <string name="pass_code_locked">Locked with passcode</string>
   <string name="pattern_locked">Locked with pattern</string>
   <string name="illegal_argument_exception_message">A valid ACTION is needed in the Intent passed to</string>
+  <!--Bottom navigation bar-->
+  <string name="bottom_nav_files">Files</string>
+  <string name="bottom_nav_uploads">Uploads</string>
+  <string name="bottom_nav_offline">Offline</string>
+  <string name="bottom_nav_links">Links</string>
   <string name="recommend_subject">Try %1$s on your smartphone!</string>
   <string name="recommend_text">I want to invite you to use %1$s on your smartphone!\nDownload here: %2$s</string>
   <string name="error_reason">because</string>
@@ -370,6 +375,7 @@
   <string name="clipboard_uxexpected_error">Unexpected error whilst copying to clipboard</string>
   <string name="clipboard_label">Text copied from %1$s</string>
   <string name="error_cant_bind_to_operations_service">Critical error: cannot perform operations</string>
+  <string name="network_error_socket_exception">An error occurred whilst connecting to the server.</string>
   <string name="network_error_socket_timeout_exception">The server took too long to respond</string>
   <string name="network_error_connect_timeout_exception">The server took too long to connect</string>
   <string name="network_host_not_available">Server could not be reached</string>
