--- a/owncloudApp/src/main/res/values-hu-rHU/strings.xml
+++ b/owncloudApp/src/main/res/values-hu-rHU/strings.xml
@@ -74,6 +74,9 @@
   <string name="pass_code_locked">Jelszóval zárolva</string>
   <string name="pattern_locked">Mintával zárolva</string>
   <string name="illegal_argument_exception_message">Érvényes MŰVELET szükséges</string>
+  <!--Bottom navigation bar-->
+  <string name="bottom_nav_files">Fájlkezelő</string>
+  <string name="bottom_nav_uploads">Feltöltések</string>
   <string name="recommend_subject">Próbálja ki a(z) %1$s appot az okostelefonján!</string>
   <string name="recommend_text">Szeretnélek meghívni, hogy használd a(z) %1$s alkalmazást az okostelefonodon!\nTöltsd le innen: %2$s</string>
   <string name="auth_failure_snackbar">Sikertelen bejelentkezés</string>
@@ -359,6 +362,7 @@
   <string name="clipboard_uxexpected_error">Váratlan hiba a vágólapra másolás közben</string>
   <string name="clipboard_label">A másolt szöveg %1$s</string>
   <string name="error_cant_bind_to_operations_service">Kritikus hiba: nem tudja végrehajtani a műveleteket</string>
+  <string name="network_error_socket_exception">Hiba történt egy szerverhez csatlakozáskor.</string>
   <string name="network_error_socket_timeout_exception">A kiszolgáló túl sokára válaszolt</string>
   <string name="network_error_connect_timeout_exception">Túl sokáig tartott egy kapcsolatot a szerverrel</string>
   <string name="network_host_not_available">A szerver nem érhető el</string>
