--- a/owncloudApp/src/main/res/values-id/strings.xml
+++ b/owncloudApp/src/main/res/values-id/strings.xml
@@ -73,6 +73,10 @@
   <string name="pattern_no_longer_required">Pola tidak akan ditanyakan lagi</string>
   <string name="pattern_configure_your_pattern_explanation">Pola akan diminta setiap kali aplikasi dimulai</string>
   <string name="illegal_argument_exception_message">AKSI yang sah dibutuhkan dalam maksud melewati ke </string>
+  <!--Bottom navigation bar-->
+  <string name="bottom_nav_files">Berkas</string>
+  <string name="bottom_nav_uploads">Unggah</string>
+  <string name="bottom_nav_links">Tautan</string>
   <string name="recommend_subject">Cobalah %1$s pada ponsel cerdas Anda!</string>
   <string name="recommend_text">Saya mengajak Anda untuk menggunakan %1$s di ponsel cerdas Anda!\nUnduh gratis disini: %2$s</string>
   <string name="auth_failure_snackbar">Otentikasi gagal</string>
@@ -356,6 +360,7 @@
   <string name="clipboard_uxexpected_error">Kesalahan tidak terduga saat mencoba menyalin ke clipboard</string>
   <string name="clipboard_label">Menyalin teks dari \'%1$s\' </string>
   <string name="error_cant_bind_to_operations_service">Kesalahan fatal: tidak dapat melakukan operasi</string>
+  <string name="network_error_socket_exception">Terjadi kesalahan saat menghubungkan dengan server.</string>
   <string name="network_error_socket_timeout_exception">Server terlalu lama merespon</string>
   <string name="network_error_connect_timeout_exception">Terlalu lama untuk terhungung ke server</string>
   <string name="network_host_not_available">Tidak dapat menjangkau server</string>
