--- a/owncloudApp/src/main/res/values-it/strings.xml
+++ b/owncloudApp/src/main/res/values-it/strings.xml
@@ -73,6 +73,7 @@
   <string name="pattern_no_longer_required">La sequenza non sarà più richiesta</string>
   <string name="pattern_configure_your_pattern_explanation">La sequenza sarà richiesta ogni volta che la app sarà avviata</string>
   <string name="illegal_argument_exception_message">Una AZIONE valida è necessaria per l\'intenzione di passare a</string>
+  <!--Bottom navigation bar-->
   <string name="recommend_subject">Prova %1$s sul tuo smartphone!</string>
   <string name="recommend_text">Vorrei invitarti a usare %1$s sul tuo smartphone!\nScarica qui: %2$s</string>
   <string name="auth_failure_snackbar">Autenticazione fallita</string>
@@ -356,6 +357,7 @@
   <string name="clipboard_uxexpected_error">Errore inatteso durante la copia negli appunti</string>
   <string name="clipboard_label">Testo copiato da %1$s</string>
   <string name="error_cant_bind_to_operations_service">Errore grave: impossibile eseguire le operazioni</string>
+  <string name="network_error_socket_exception">Si è verificato un errore durante la connessione al server.</string>
   <string name="network_error_socket_timeout_exception">Il server ha richiesto troppo tempo per rispondere</string>
   <string name="network_error_connect_timeout_exception">Il server impiega troppo tempo per connettersi</string>
   <string name="network_host_not_available">Non è possibile contattare il server</string>
