--- a/owncloudApp/src/main/res/values-ja-rJP/strings.xml
+++ b/owncloudApp/src/main/res/values-ja-rJP/strings.xml
@@ -61,6 +61,10 @@
   <string name="pattern_removed">パターンを削除しました</string>
   <string name="pattern_already_set">同じタイミングでパターンとパスコードを有効化することはできません。最初に無効化してください。</string>
   <string name="passcode_already_set">同じタイミングでパターンとパスコードを有効化することはできません。最初に無効化してください。</string>
+  <!--Bottom navigation bar-->
+  <string name="bottom_nav_files">ファイル</string>
+  <string name="bottom_nav_uploads">アップロード</string>
+  <string name="bottom_nav_links">リンク</string>
   <string name="recommend_subject">スマートフォンで %1$s を試してください！</string>
   <string name="recommend_text">スマートフォンで %1$s を利用してみませんか！
 ここからダウンロードしてください: %2$s</string>
@@ -332,6 +336,7 @@
   <string name="clipboard_uxexpected_error">クリップボードにテキストをコピーするときにエラーが発生しました。</string>
   <string name="clipboard_label">%1$s からテキストをコピー</string>
   <string name="error_cant_bind_to_operations_service">致命的なエラー：操作を実行できません</string>
+  <string name="network_error_socket_exception">サーバーへの接続中にエラーが発生しました。</string>
   <string name="network_error_socket_timeout_exception">サーバーからの反応がありません</string>
   <string name="network_host_not_available">サーバーに接続できませんでした</string>
   <string name="forbidden_permissions">権限 %s がありません</string>
