--- a/owncloudApp/src/main/res/values-lt-rLT/strings.xml
+++ b/owncloudApp/src/main/res/values-lt-rLT/strings.xml
@@ -65,6 +65,10 @@
   <string name="pattern_no_longer_required">Daugiau modelio užraktas nebus klausiamas</string>
   <string name="pattern_configure_your_pattern_explanation">Kiekvieną kartą paleidus programėle bus reikalaujamas užraktas</string>
   <string name="illegal_argument_exception_message">A valid ACTION is needed in the Intent passed to</string>
+  <!--Bottom navigation bar-->
+  <string name="bottom_nav_files">Failai</string>
+  <string name="bottom_nav_uploads">Įkėlimai</string>
+  <string name="bottom_nav_links">Nuorodos</string>
   <string name="recommend_subject">Išbandykite %1$s savo išmaniajame telefone!</string>
   <string name="recommend_text">Noriu pakviesti tave naudotis %1$s išmaniajame telefone!\nParsisiųks čia: %2$s</string>
   <string name="auth_failure_snackbar">Autentikacija nepavyko.</string>
@@ -332,6 +336,7 @@
   <string name="clipboard_uxexpected_error">Netikėta klaida kopijuojant atmintį</string>
   <string name="clipboard_label">Tekstas nukopijuotas iš %1$s</string>
   <string name="error_cant_bind_to_operations_service">Kritinė klaida: negalima įvykdyti operacijos</string>
+  <string name="network_error_socket_exception">Klaida prisijungiant prie serverio.</string>
   <string name="network_error_socket_timeout_exception">Serveris per ilgai neatsako</string>
   <string name="network_error_connect_timeout_exception">Serveris per ilgai jungiasi</string>
   <string name="network_host_not_available">Serveris nepasiekiamas</string>
