--- a/owncloudApp/src/main/res/values-pl/strings.xml
+++ b/owncloudApp/src/main/res/values-pl/strings.xml
@@ -71,6 +71,7 @@
   <string name="pattern_configure_your_pattern_explanation">Wzór odblokowywania będzie wymagany przy każdorazowym uruchomieniu aplikacji</string>
   <string name="pass_code_locked">Zablokowanie hasłem</string>
   <string name="pattern_locked">Zablokowanie wzorem</string>
+  <!--Bottom navigation bar-->
   <string name="recommend_subject">Wypróbuj %1$s na swoim smartphonie!</string>
   <string name="recommend_text">Chciałbym zaprosić Cię do używania %1$s na swoim smartfonie!\nŚciągnij tutaj: %2$s</string>
   <string name="error_reason">ponieważ</string>
@@ -361,6 +362,7 @@
   <string name="clipboard_uxexpected_error">Wystąpił błąd podczas kopiowania do schowka</string>
   <string name="clipboard_label">Skopiowano tekst z %1$s</string>
   <string name="error_cant_bind_to_operations_service">Błąd krytyczny: nie można wykonać operacji</string>
+  <string name="network_error_socket_exception">Pojawił się błąd podczas łączenia z serwerem.</string>
   <string name="network_error_socket_timeout_exception">Serwer zbyt długo nie odpowiadał</string>
   <string name="network_error_connect_timeout_exception">Zbyt długi czas łączenia z serwerem</string>
   <string name="network_host_not_available">Serwer jest nieosiągalny</string>
